// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pager renders the Pager correctly with the Mint Theme 1`] = `
.c11 {
  background: transparent;
  border: none;
  color: rgba(0,0,0,0.9);
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 14px;
  outline: none;
  width: 30px;
}

.c11:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px #FFF inset;
  -webkit-box-border: none;
}

.c11::-webkit-input-placeholder {
  color: rgba(0,0,0,0.3);
}

.c11::-moz-placeholder {
  color: rgba(0,0,0,0.3);
}

.c11:-ms-input-placeholder {
  color: rgba(0,0,0,0.3);
}

.c11::placeholder {
  color: rgba(0,0,0,0.3);
}

.c11:invalid,
.c11:required {
  box-shadow: none;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: -11px;
  margin-left: -11px;
  width: 40px;
}

.c14 {
  display: inline-block;
  position: relative;
  color: rgba(0,0,0,0.65);
  background-color: transparent;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 24px;
  width: 24px;
}

.c14:hover {
  color: rgba(0,0,0,0.90);
  background-color: transparent;
}

.c14::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e910";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c19 {
  color: rgba(0,0,0,0.9);
  display: block;
  font-weight: 600;
  padding-bottom: 8px;
}

.c19 .c22,
.c19 .sc-ifAKCX {
  vertical-align: middle;
}

.c9 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: #fff;
  border: 1px solid #668592;
  box-sizing: border-box;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 0 0 70%;
  -ms-flex: 0 0 70%;
  flex: 0 0 70%;
  margin: 0;
  min-height: 40px;
  padding-left: 11px;
  padding-right: 11px;
}

.c9 .c10 {
  height: calc(40px - 4px);
}

.c9 .c10:-webkit-autofill {
  margin-top: 2px;
  height: calc(40px - 8px);
}

.c9 input::-ms-clear {
  display: none;
}

.c9 input::-webkit-contacts-auto-fill-button {
  display: none!important;
}

.c3 .c10 {
  cursor: pointer;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-shadow: 0 0 0 rgba(0,0,0,0.9);
}

.c3 .c10::-webkit-input-placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c3 .c10::-moz-placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c3 .c10:-ms-input-placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c3 .c10::placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c3 .c8 {
  cursor: pointer;
}

.c6 + .c5 {
  margin-top: 16px;
}

.c7 {
  display: block;
}

.c4 .c10 {
  padding-left: 11px;
}

.c4 .c8 {
  padding-left: 0;
  padding-right: 0;
}

.c4 .c12 {
  margin-right: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-width: 0;
  font-size: 13px;
  height: 39px;
  max-height: 39px;
  border-width: 1px 1px 1px 1px;
  border-style: none solid solid solid;
  border-color: #CCD6DB;
  background-color: #FAFBFB;
  border-top: none;
}

.c0 .carbon-input-icon {
  border: none;
  background: none;
}

.c0 .carbon-input-icon:hover {
  background: none;
  color: #000000;
}

.c0 .common-input__field:focus-within {
  outline: 3px solid #FFB500;
}

.c0 .common-input__input {
  border: 1px solid #668592;
}

.c0 .common-input__input:active,
.c0 .common-input__input:hover,
.c0 .common-input__input:focus {
  border: 1px solid #668592;
}

.c0 .common-input__input:focus {
  border: 1px solid #668592;
  color: #000000;
}

.c0 .common-input__input:focus ~ label .carbon-input-icon,
.c0 .common-input__input:focus ~ label .carbon-input-icon:hover {
  border: none;
  background: none;
  color: #000000;
}

.c0 .common-input__input:hover ~ label .carbon-input-icon {
  border: none;
  background: none;
  color: #000000;
}

.c0 .common-input__input:hover ~ label .carbon-input-icon:hover {
  border: none;
  background: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 30%;
  -ms-flex: 1 1 30%;
  flex: 1 1 30%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 .c8 {
  width: 55px;
  height: 26px;
  min-height: 26px;
  min-width: 10px;
  margin: 0px 4px;
}

.c1 .c8 .c10 {
  font-size: 14px;
  padding-right: 0px;
  padding-left: 8px;
  height: 22px;
  width: 13px;
}

.c1 .c8 .c12 {
  margin-left: 0;
  width: 20px;
  height: 24px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15.c15 .c8 {
  padding: 0;
  margin: 8px 4px 0 4px;
  height: 26px;
  line-height: 26px;
  min-height: 24px;
}

.c15.c15 .c8 .c10 {
  text-align: center;
  height: 24px;
  padding: 0;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 12px;
}

.c16 {
  padding: 0 10px;
  font-size: 13px;
  border-width: 0;
  background-color: transparent;
  cursor: pointer;
  margin-left: 7px;
  margin-right: 7px;
  color: rgba(0,0,0,0.90);
  color: rgba(0,0,0,0.3);
  cursor: not-allowed;
}

.c16:focus {
  outline: solid 3px #FFB500;
  padding: 5px 10px;
}

.c20 {
  padding: 0 10px;
  font-size: 13px;
  border-width: 0;
  background-color: transparent;
  cursor: pointer;
  margin-left: 7px;
  margin-right: 7px;
  color: rgba(0,0,0,0.90);
}

.c20:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  padding: 5px 10px;
}

.c20:focus {
  outline: solid 3px #FFB500;
  padding: 5px 10px;
}

.c18 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 30%;
  -ms-flex: 1 1 30%;
  flex: 1 1 30%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  className="c0"
  data-component="pager"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span>
        Show
      </span>
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        className="c3"
        data-component="simple-select"
      >
        <div
          className="c4"
          size="medium"
        >
          <div
            className="c5 c6"
            data-element="page-select"
          >
            <div
              className="c7"
            >
              <div
                className="c8 c9"
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="presentation"
                size="medium"
              >
                <input
                  aria-controls=""
                  autoComplete="off"
                  className="c10 c11"
                  data-element="input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  placeholder="Please Select..."
                  size="medium"
                  type="select"
                  value="10"
                />
                <span
                  className="c12 c13"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  size="medium"
                >
                  <span
                    className="c14"
                    data-component="icon"
                    data-element="dropdown"
                    disabled={false}
                    fontSize="small"
                    type="dropdown"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span>
        items
      </span>
    </div>
  </div>
  <div
    className="c15"
  >
    <button
      className="c16"
      data-element="pager-link-first"
      disabled={true}
      onClick={[Function]}
    >
      First
    </button>
    <button
      className="c16"
      data-element="pager-link-previous"
      disabled={true}
      onClick={[Function]}
    >
      Previous
    </button>
    <div
      className="c17"
    >
      <span
        className="c18"
      >
        Page 
      </span>
      <label
        className="c19"
        data-element="label"
        htmlFor="Pager_guid-12345"
        width={30}
      >
        <div
          className="c5 c6"
          data-element="current-page"
        >
          <div
            className="c7"
          >
            <div
              className="c8 c9"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="presentation"
              size="medium"
            >
              <input
                className="c10 c11"
                data-element="input"
                id="Pager_guid-12345"
                name="guid-12345"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                size="medium"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
      </label>
      <span
        className="c18"
      >
         of 
        10
      </span>
    </div>
    <button
      className="c20"
      data-element="pager-link-next"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
    <button
      className="c20"
      data-element="pager-link-last"
      disabled={false}
      onClick={[Function]}
    >
      Last
    </button>
  </div>
  <div
    className="c21"
  >
    100
     
    items
  </div>
</div>
`;

exports[`Pager renders the Pager without pageSizeSelection 1`] = `
.c13 {
  background: transparent;
  border: none;
  color: rgba(0,0,0,0.9);
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 14px;
  outline: none;
  width: 30px;
}

.c13:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px #FFF inset;
  -webkit-box-border: none;
}

.c13::-webkit-input-placeholder {
  color: rgba(0,0,0,0.3);
}

.c13::-moz-placeholder {
  color: rgba(0,0,0,0.3);
}

.c13:-ms-input-placeholder {
  color: rgba(0,0,0,0.3);
}

.c13::placeholder {
  color: rgba(0,0,0,0.3);
}

.c13:invalid,
.c13:required {
  box-shadow: none;
}

.c6 {
  color: rgba(0,0,0,0.9);
  display: block;
  font-weight: 600;
  padding-bottom: 8px;
}

.c6 .c18,
.c6 .sc-ifAKCX {
  vertical-align: middle;
}

.c11 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: #fff;
  border: 1px solid #668592;
  box-sizing: border-box;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 0 0 70%;
  -ms-flex: 0 0 70%;
  flex: 0 0 70%;
  margin: 0;
  min-height: 40px;
  padding-left: 11px;
  padding-right: 11px;
}

.c11 .c12 {
  height: calc(40px - 4px);
}

.c11 .c12:-webkit-autofill {
  margin-top: 2px;
  height: calc(40px - 8px);
}

.c11 input::-ms-clear {
  display: none;
}

.c11 input::-webkit-contacts-auto-fill-button {
  display: none!important;
}

.c15 .c12 {
  cursor: pointer;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-shadow: 0 0 0 rgba(0,0,0,0.9);
}

.c15 .c12::-webkit-input-placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c15 .c12::-moz-placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c15 .c12:-ms-input-placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c15 .c12::placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c15 .c10 {
  cursor: pointer;
}

.c8 + .c7 {
  margin-top: 16px;
}

.c9 {
  display: block;
}

.c16 .c12 {
  padding-left: 11px;
}

.c16 .c10 {
  padding-left: 0;
  padding-right: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-width: 0;
  font-size: 13px;
  height: 39px;
  max-height: 39px;
  border-width: 1px 1px 1px 1px;
  border-style: none solid solid solid;
  border-color: #CCD6DB;
  background-color: #FAFBFB;
  border-top: none;
}

.c0 .carbon-input-icon {
  border: none;
  background: none;
}

.c0 .carbon-input-icon:hover {
  background: none;
  color: #000000;
}

.c0 .common-input__field:focus-within {
  outline: 3px solid #FFB500;
}

.c0 .common-input__input {
  border: 1px solid #668592;
}

.c0 .common-input__input:active,
.c0 .common-input__input:hover,
.c0 .common-input__input:focus {
  border: 1px solid #668592;
}

.c0 .common-input__input:focus {
  border: 1px solid #668592;
  color: #000000;
}

.c0 .common-input__input:focus ~ label .carbon-input-icon,
.c0 .common-input__input:focus ~ label .carbon-input-icon:hover {
  border: none;
  background: none;
  color: #000000;
}

.c0 .common-input__input:hover ~ label .carbon-input-icon {
  border: none;
  background: none;
  color: #000000;
}

.c0 .common-input__input:hover ~ label .carbon-input-icon:hover {
  border: none;
  background: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 30%;
  -ms-flex: 1 1 30%;
  flex: 1 1 30%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 .c10 {
  width: 55px;
  height: 26px;
  min-height: 26px;
  min-width: 10px;
  margin: 0px 4px;
}

.c1 .c10 .c12 {
  font-size: 14px;
  padding-right: 0px;
  padding-left: 8px;
  height: 22px;
  width: 13px;
}

.c1 .c10 .c17 {
  margin-left: 0;
  width: 20px;
  height: 24px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2.c2 .c10 {
  padding: 0;
  margin: 8px 4px 0 4px;
  height: 26px;
  line-height: 26px;
  min-height: 24px;
}

.c2.c2 .c10 .c12 {
  text-align: center;
  height: 24px;
  padding: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 12px;
}

.c3 {
  padding: 0 10px;
  font-size: 13px;
  border-width: 0;
  background-color: transparent;
  cursor: pointer;
  margin-left: 7px;
  margin-right: 7px;
  color: rgba(0,0,0,0.90);
  color: rgba(0,0,0,0.3);
  cursor: not-allowed;
}

.c3:focus {
  outline: solid 3px #FFB500;
  padding: 5px 10px;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 30%;
  -ms-flex: 1 1 30%;
  flex: 1 1 30%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  className="c0"
  data-component="pager"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  >
    <button
      className="c3"
      data-element="pager-link-first"
      disabled={true}
      onClick={[Function]}
    >
      First
    </button>
    <button
      className="c3"
      data-element="pager-link-previous"
      disabled={true}
      onClick={[Function]}
    >
      Previous
    </button>
    <div
      className="c4"
    >
      <span
        className="c5"
      >
        Page 
      </span>
      <label
        className="c6"
        data-element="label"
        htmlFor="Pager_guid-12345"
        width={30}
      >
        <div
          className="c7 c8"
          data-element="current-page"
        >
          <div
            className="c9"
          >
            <div
              className="c10 c11"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="presentation"
              size="medium"
            >
              <input
                className="c12 c13"
                data-element="input"
                id="Pager_guid-12345"
                name="guid-12345"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                size="medium"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </label>
      <span
        className="c5"
      >
         of 
        1
      </span>
    </div>
    <button
      className="c3"
      data-element="pager-link-next"
      disabled={true}
      onClick={[Function]}
    >
      Next
    </button>
    <button
      className="c3"
      data-element="pager-link-last"
      disabled={true}
      onClick={[Function]}
    >
      Last
    </button>
  </div>
  <div
    className="c14"
  >
    100
     
    items
  </div>
</div>
`;
